Dismiss in help product on swipe events

The in product help should be dismissed on swipe event because the
toolbar is going away and the bubble isn't linked to any UI element
after that.

Bug: 855029
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I6cc62441b613c5c9f14d32bb7584364a9b529f77
Reviewed-on: https://chromium-review.googlesource.com/1115124
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570421}
Former-commit-id: 52706ac690c03e7285fef500206cd031450e39fd